fix input type submit on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,13 @@ a {
     text-decoration: none;
 }
 
+input[type="submit"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    opacity: 1;
+}
+
 /* Adaugam proprietati legate de font */
 body {
     font-family: 'Poppins', sans-serif;
